Fixed height & z-index issue with mobile nav bar

--- a/src/assets/styles/Mobilenav.scss
+++ b/src/assets/styles/Mobilenav.scss
@@ -11,6 +11,7 @@
     justify-items: center;
     align-items: flex-start;
     height: inherit;
+    max-height: 100vh;
     width: 100vw;
 
     .smLogo{
